Updated swagger documentation and testing
